# pc-ble-driver-py

./: CMakeLists.txt  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: build.yml
pc_ble_driver_py/: __init__.py
swig/: pc_ble_driver.i.in
